# atools

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
utils/: CMakeLists.txt  Makefile.am  alignment_io.cc  atools.cc  exception.h  exception_type.cc  exception_type.h  filelib.h  getopt_long_exception.h
